<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl" >
    <item android:id="@+id/transfer"
        android:title=""
        android:icon="@drawable/ic_menu_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="always"
        android:layoutDirection="rtl" >

        <menu>
            <item android:id="@+id/order"
                android:title="@string/Orders" />

            <item android:id="@+id/lang"
                android:title="@string/lang" />

            <item android:id="@+id/policy"
                android:title="@string/policy" />
            <item
                android:id="@+id/about"
                android:title="@string/about" />
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>

    </item>


</menu>